test/errors/type/collections/set/__lt2.yasl
echo collections.set().__lt(1, collections.set())
